--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,8 @@
 #header {
   display: flex;
   align-items: center;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 #header > #logo > img {
@@ -17,6 +19,70 @@
   flex-grow: 1;
 }
 
-#header > #color-mode {
-  margin-left: 10px;
+.theme-switch {
+  margin-right: 16px; 
 }
+
+.theme-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  position: absolute;
+}
+
+.slider {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+  background-color: #fcfa9c;
+  border-radius: 34px;
+  transition: background-color 0.4s;
+  cursor: pointer;
+  position: relative;
+  border: 2px solid #888;
+}
+
+.slider:before {
+  position: absolute;
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  border-radius: 50%;
+  transition: transform 0.4s;
+  display: none;
+}
+
+input:checked + .slider{
+  background-color: #377188;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider:after {
+  content:"☀️";
+  position: absolute;
+  left: 0;
+  top: 46%;
+  transform: translateY(-50%);
+  font-size: 18px;
+  opacity: 1;
+  transition: 0.4s;
+}
+
+input:checked + .slider:after{
+  content: "🌑";
+  left: 25px;
+}
+
+/* #header > #color-mode {
+  margin-left: 10px;
+} */
+
+/* #header > #theme-toggle {
+  margin-left: 10px;
+} */
